# Hello-AIDeployment

./: .gitignore  README.md
HAID/libtorch/: CMakeLists.txt  libtorch_yolox.cpp
HAID/opencv_dnn/: CMakeLists.txt  demo_camera.cpp  demo_video.cpp  get_model_file.sh  get_video_file.sh
HAID/tensorrt/resnet/: export_onnx.py  py_r50_test.py
HAID/tensorrt/resnet/src/: main.cpp
HAID/tensorrt/unet/: README.md
HAID/tensorrt/unet/workspace/: UnetMergePost.py  export_onnx_unet.py  predict.py
HAID/tensorrt/unet/workspace/1.5-unet/: Makefile
HAID/tensorrt/unet/workspace/1.5-unet/src/: main.cpp
HAID/tensorrt/unet/workspace/1.5-unet/unet-pytorch-change/: export.py
HAID/tensorrt/unet/workspace/1.5-unet/unet-pytorch-change/nets/: vgg.py
HAID/utils/: exp_onnx.py
